<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project %1$d repository is downloaded</string>
    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>


    // Download options
    <string name="txt_glide_title">Glide - Image Loading Library by BumpTech</string>
    <string name="txt_udacity_title">LoadApp - Current repository by Udacity</string>
    <string name="txt_retrofit_title">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="txt_invalid_option">Invalid option</string>
    <string name="txt_cloud_image"><![CDATA[<string name=\"cloud_image\">cloud image with an arrow down</string>]]></string>


    // Notification
    <string name="txt_notification_channel">Download</string>
    <string name="txt_download_notification_channel_id" translatable="false">download_channel</string>
    <string name="txt_notification_button">Check the status</string>
    <string name="txt_ok">Ok</string>

    //Detail screen
    <string name="txt_file_name">File Name:</string>
    <string name="txt_status">Status:</string>
    <string name="txt_success">SUCCESS</string>
    <string name="txt_error">ERROR</string>


</resources>
