<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/detail_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_file_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/normal_font_size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@id/labelName"
        app:layout_constraintTop_toTopOf="@id/labelStatus"
        android:textSize="@dimen/normal_font_size" />


    <TextView
        android:id="@+id/labelStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_status"
        android:textColor="@android:color/black"
        android:textSize="@dimen/normal_font_size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="@id/labelStatus"
        android:textSize="@dimen/normal_font_size" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/normal_margin"
        android:background="@color/colorPrimary"
        android:text="@string/txt_ok"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_font_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>